--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Indecision App</title>
+        <title>What ToDo App</title>
     </head>
 
     <body>
